--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,9 @@
 <html>
   <head>
     <title>MyAvatar</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -18,19 +16,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <%= <a class="navbar-brand" href="<%= root_url %>"/>Home</a> %>
+        <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
-
-    <!-- content -->
     <div class="container"  role="main">
       <%= yield %>
-    </div>
+   </div>
   </body>
 </html>
