--- a/app/views/options/show.html.erb
+++ b/app/views/options/show.html.erb
@@ -6,10 +6,10 @@
 
 <%= form_for @avatar do |f| %>
     <%= f.hidden_field :user_id %>
-    <%= f.hidden_field :option_id %>
+    <%= f.hidden_field :option_id %><br>
     <% if current_user.admin? %>
         <%= link_to 'Edit Options', edit_option_path(@option) %>
     <% else %>
-        <%= f.submit "Keep Avatar"
+        <%= f.submit "Keep Avatar" %>
     <% end %>
 <% end %>
