--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,8 +3,8 @@
     <%= f.label :name %>
     <%= f.text_field :name %><br>
 
-    <%= f.label :password %>
-    <%= f.password_field :password %><br>
+    <%= f.label :password_digest %>
+    <%= f.password_field :password_digest %><br>
 
     <%= f.label :admin %>
     <%= f.check_box :admin %><br>
