--- a/app/views/session/destroy.html.erb
+++ b/app/views/session/destroy.html.erb
@@ -1,2 +1,2 @@
-<h1>Sessions#destroy</h1>
-<p> app/views/sessions/destroy.html.erb </P>
+<h1>Session#destroy</h1>
+<p> app/views/session/destroy.html.erb </P>
