--- a/app/views/session/create.html.erb
+++ b/app/views/session/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Sessions#create</h1>
-<p> app/view/sessions/create.html.erb </p>
+<h1>Session#create</h1>
+<p> app/view/session/create.html.erb </p>
